# rustdock-vina

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: docking.rs  grid.rs  optimization.rs  scoring.rs
benchmark_data/: ligand.pdbqt  receptor.pdbqt  rustdock_output.pdbqt  vina_output.pdbqt  vina_pose1.pdbqt
src/: lib.rs  main.rs
src/atom/: mod.rs
src/forcefield/: ad4.rs  mod.rs  vina.rs
src/grid/: mod.rs
src/io/: mod.rs
src/math/: mod.rs
src/molecule/: mod.rs
src/optimization/: local.rs  mod.rs  monte_carlo.rs
src/scoring/: mod.rs  vina_score.rs
tests/: integration_tests.rs
tests/test_data/: ligand.pdbqt  receptor.pdbqt
